<resources>
    <string name="submit_btn">ตกลง</string>
    <string name="cancel_btn">ย้อนกลับ</string>
    <string name="title_activity_login">เข้าสู่ระบบ</string>
    <string name="title_activity_signup">สมัครสมาชิก</string>
    <string name="title_activity_classroom">ห้องเรียน</string>
    <string name="title_activity_classroom_id">รหัสห้องเรียน</string>
    <string name="title_activity_classroom_menu">เมนูห้องเรียน</string>
    <string name="title_activity_classroom_create">สร้างห้องเรียน</string>
    <string name="title_activity_classroom_delete">ลบห้องเรียน</string>
    <string name="title_activity_project">โปรเจ็กต์</string>
    <string name="title_activity_project_create">สร้างโปรเจ็กต์</string>
    <string name="title_activity_project_delete">ลบโปรเจ็กต์</string>
    <string name="title_activity_member">สมาชิก</string>
    <string name="title_activity_group">กลุ่ม</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ชื่อ-นามสกุล</string>
    <string name="nav_header_subtitle">example@example.com</string>
    <string name="action_CreateClassroom">สร้างห้องเรียน</string>

    <!-- Strings related to login -->
    <string name="prompt_email">user@example.com</string>
    <string name="prompt_password">password (มากกว่า 5 ตัวอักษร)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">เข้าสู่ระบบ</string>
    <string name="error_invalid_email">ไอดีผู้ใช้ไม่ถูกต้อง</string>
    <string name="error_invalid_password">รหัสผ่าน มากกว่า 6 ตัวอักษร</string>
    <string name="error_incorrect_password">รหัสผ่านไม่ถูกต้อง</string>
    <string name="error_field_required">กรุณากรอกช่องนี้</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup">สมัครสมาชิกและเข้าสู่ระบบ</string>
    <string name="login">เข้าสู่ระบบ</string>

    <!-- Strings related to SignUp -->
    <string name="signup_name">ชื่อ</string>
    <string name="signup_lname">นามสกุล</string>
    <string name="signup_status">สถานะ</string>
    <string name="signup_value_teacher">อาจารย์</string>
    <string name="signup_value_student">นักเรียน</string>
    <string name="signup_id">รหัสประจำตัว นักศึกษา หรือ อาจารย์</string>
    <string name="signup_email">อีเมล</string>
    <string name="signup_password">รหัสผ่าน มากกว่า 6 ตัวอักษร</string>
    <string name="group_list">group_list</string>
    <string name="member_list">member_list</string>
    <string name="project_list">project_list</string>
    <string name="hint_class_subject">ชื่อห้องเรียน</string>
    <string name="title_activity_profile">โปรไฟล์</string>
    <string name="nav_header_desc">โปรไฟล์ของคุณ</string>
    <string name="remove">ลบ</string>
    <string name="hint_project_name">ชื่อโปรเจ็กต์</string>
    <string name="action_showClassroomID">แสดงรหัสห้องเรียน</string>
    <string name="title_ativity_class_join">เข้าร่วมห้องเรียน</string>
    <string name="title_hint_class_join">โปรดขอรหัสห้องเรียนได้จากอาจารย์ของคุณ</string>
    <string name="hint_class_id">รหัสห้องเรียน</string>
    <string name="titile_activity_group">กลุ่ม</string>
    <string name="title_activity_group_detail">รายละเอียดกลุ่ม</string>
</resources>
